arrow_convert/tests/ui/struct_rename_all_not_string.stderr
error: Unexpected value for rename_all
 --> tests/ui/struct_rename_all_not_string.rs:4:15
  |
4 | #[arrow_field(rename_all = 42)]
  |               ^^^^^^^^^^
